syntax = "proto3";

package user_service;

option go_package = "github.com/psds-microservice/user-service/pkg/gen/user_service;user_service";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

// UserService — пользователи, аутентификация, операторы, сессии. REST-маппинг в google.api.http.
service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse) {
    option (google.api.http) = {
      post: "/api/v1/users"
      body: "*"
    };
  }
  rpc GetUser (GetUserRequest) returns (UserResponse) {
    option (google.api.http) = {
      get: "/api/v1/users/{id}"
    };
  }
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse) {
    option (google.api.http) = {
      put: "/api/v1/users/{id}"
      body: "*"
    };
  }
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {
    option (google.api.http) = {
      delete: "/api/v1/users/{id}"
    };
  }
  rpc Login (LoginRequest) returns (UserResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/login"
      body: "*"
    };
  }
  rpc ValidateUserSession (ValidateUserSessionRequest) returns (ValidateUserSessionResponse) {
    option (google.api.http) = {
      post: "/api/v1/sessions/validate"
      body: "*"
    };
  }
  rpc UpdateUserPresence (UpdateUserPresenceRequest) returns (UpdateUserPresenceResponse) {
    option (google.api.http) = {
      put: "/api/v1/users/{user_id}/presence"
      body: "*"
    };
  }
  rpc GetAvailableOperators (GetAvailableOperatorsRequest) returns (GetAvailableOperatorsResponse) {
    option (google.api.http) = {
      get: "/api/v1/operators/available"
    };
  }
  rpc UpdateOperatorStatus (UpdateOperatorStatusRequest) returns (UpdateOperatorStatusResponse) {
    option (google.api.http) = {
      put: "/api/v1/operators/{user_id}/availability"
      body: "*"
    };
  }
}

message User {
  string id = 1;  // UUID
  string username = 2;
  string email = 3;
  string phone = 4;
  string status = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string phone = 3;
  string password = 4;
}

message GetUserRequest {
  string id = 1;  // UUID
}

message UpdateUserRequest {
  string id = 1;  // UUID
  string username = 2;
  string email = 3;
  string phone = 4;
  string password = 5;  // Optional, empty if not changing
  string status = 6;
}

message DeleteUserRequest {
  string id = 1;  // UUID
}

message DeleteUserResponse {
  bool success = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string phone = 4;
  string status = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  string error = 8;
}

message ValidateUserSessionRequest {
  string user_id = 1;
  string session_external_id = 2;
  string participant_role = 3;
}

message ValidateUserSessionResponse {
  bool allowed = 1;
  string error = 2;
}

message UpdateUserPresenceRequest {
  string user_id = 1;
  bool is_online = 2;
}

message UpdateUserPresenceResponse {
  bool success = 1;
  string error = 2;
}

message GetAvailableOperatorsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message GetAvailableOperatorsResponse {
  repeated UserResponse operators = 1;
  int64 total = 2;
  string error = 3;
}

message UpdateOperatorStatusRequest {
  string user_id = 1;
  bool is_available = 2;
}

message UpdateOperatorStatusResponse {
  bool success = 1;
  string error = 2;
}
